--- a/src/index.css
+++ b/src/index.css
@@ -169,3 +169,13 @@ form h2 {
   letter-spacing: -0.5px;
   margin-bottom: 1.6rem;
 }
+
+@media (max-width:745px) {
+
+  .app{
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+}
